infra/k8s/policies/cilium/default-deny-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: securerag-hub
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: securerag-hub
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: securerag-hub
  - toEntities:
    - kube-apiserver
    - dns
